@@ -1,3 +1,12 @@
+2016-07-08 Riccardo Mottola <rm@gnu.org>
+
+	* client.h
+	* client.m
+	* ftpclient.m
+	* localclient.m
+	* AppController.m
+	Delete files may fail, handle result.
+
 2016-07-07 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
